cluster/traefik-dashboard/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-k3s.wallstreet30.cc`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      tls:
        - hosts:
            - traefik-k3s.wallstreet30.cc
          secretName: traefik-dashboard-tls
